--- a/ETradingRAG.ipynb
+++ b/ETradingRAG.ipynb
@@ -1,54 +1,29 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": [
-        "E8sbYA1UZ8f_"
-      ]
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "Installing packages that will be utilized in RAG"
-      ],
       "metadata": {
         "id": "b1Wzss-UVRYK"
-      }
+      },
+      "source": [
+        "Installing packages that will be utilized in RAG"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install langchain langchain-community langchain-core langchain-openai\n",
-        "!pip install chromadb\n",
-        "!pip install tiktoken google-search-results\n",
-        "!pip install pydantic\n",
-        "!pip install typing-inspect typing_extensions\n",
-        "!pip install loguru"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "UQQGlU8xb3R-",
-        "outputId": "d4229d13-be02-4f51-c6a4-4e7d513927a4",
-        "collapsed": true
+        "outputId": "d4229d13-be02-4f51-c6a4-4e7d513927a4"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting langchain\n",
             "  Downloading langchain-0.2.14-py3-none-any.whl.metadata (7.1 kB)\n",
@@ -381,19 +356,32 @@
             "Successfully installed loguru-0.7.2\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install langchain langchain-community langchain-core langchain-openai\n",
+        "!pip install chromadb\n",
+        "!pip install tiktoken google-search-results\n",
+        "!pip install pydantic\n",
+        "!pip install typing-inspect typing_extensions\n",
+        "!pip install loguru"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Importing libraries"
-      ],
       "metadata": {
         "id": "Z-JqR2AAV0h9"
-      }
+      },
+      "source": [
+        "Importing libraries"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "4oCw2Ch2cS_d"
+      },
+      "outputs": [],
       "source": [
         "import openai\n",
         "import os\n",
@@ -408,41 +396,33 @@
         "from loguru import logger\n",
         "\n",
         "from langchain.callbacks.streaming_stdout import StreamingStdOutCallbackHandler"
-      ],
-      "metadata": {
-        "id": "4oCw2Ch2cS_d"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Configure OS environment to utilize OpenAI and LangChain APIs"
-      ],
       "metadata": {
         "id": "xLuuhskIWAMa"
-      }
+      },
+      "source": [
+        "Configure OS environment to utilize OpenAI and LangChain APIs"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "jAXIHAuvcZue"
+      },
+      "outputs": [],
       "source": [
         "os.environ[\"OPENAI_API_KEY\"] = # Insert OpenAI API key here\n",
         "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
         "os.environ[\"LANGCHAIN_API_KEY\"] = # Insert LangChain API key here"
-      ],
-      "metadata": {
-        "id": "jAXIHAuvcZue"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -450,83 +430,91 @@
         "id": "YDjvyvfKeJz8",
         "outputId": "bead205f-d411-4a35-e4ae-015838932265"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "directory_path = # Enter path to data folder stored in Google Drive"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "k-B3XHF1eoyk"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "directory_path = # Enter path to data folder stored in Google Drive"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from langchain_community.document_loaders import TextLoader"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "UYNLVU4Ze7GV"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from langchain_community.document_loaders import TextLoader"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Load data into LangChain using Directory Loader"
-      ],
       "metadata": {
         "id": "22YfzjeGWxHr"
-      }
+      },
+      "source": [
+        "Load data into LangChain using Directory Loader"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "loader1 = DirectoryLoader(directory_path, glob = \"**/*.txt\", show_progress = True, loader_cls = TextLoader)\n",
-        "txt_docs = loader1.load_and_split()"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "Dy1-d_sYoFsv",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "Dy1-d_sYoFsv",
         "outputId": "7501be4c-df5d-47c9-eba2-e546a64443fa"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 23/23 [00:00<00:00, 167.78it/s]\n"
           ]
         }
+      ],
+      "source": [
+        "loader1 = DirectoryLoader(directory_path, glob = \"**/*.txt\", show_progress = True, loader_cls = TextLoader)\n",
+        "txt_docs = loader1.load_and_split()"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Create embeddings and generate local ChromaDB vector database using the documents provided"
-      ],
       "metadata": {
         "id": "W78U4P3gVCYq"
-      }
+      },
+      "source": [
+        "Create embeddings and generate local ChromaDB vector database using the documents provided"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "zbfFzg2xfder"
+      },
+      "outputs": [],
       "source": [
         "import chromadb\n",
         "embeddings = OpenAIEmbeddings()\n",
@@ -542,40 +530,40 @@
         "\n",
         "# Create Retriever\n",
         "qa_txt = RetrievalQA.from_chain_type(llm=llm, chain_type=\"stuff\", callbacks=[handler], retriever=txt_docsearch.as_retriever())"
-      ],
-      "metadata": {
-        "id": "zbfFzg2xfder"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "q = \"The MD Program at George Washington (GW) School of Medicine and Health Sciences includes substantial content in Clinical Public Health (population health, health systems science, health policy, and community health) to prepare GW graduates for an expanded scope of practice required to be successful 21st century physicians. Write a 350 character short essay on Ishani Nautiyal's specific experiences related to that aspect of the MD Program? Write in first person tone as if you are Ishani. Cite concrete examples.\"\n",
-        "qa_txt.invoke(q)"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "4BsG5Oz0rpxy",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "4BsG5Oz0rpxy",
         "outputId": "60e2b70b-f063-4043-fb35-3bbadfd89f9a"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'query': \"The MD Program at George Washington (GW) School of Medicine and Health Sciences includes substantial content in Clinical Public Health (population health, health systems science, health policy, and community health) to prepare GW graduates for an expanded scope of practice required to be successful 21st century physicians. Write a 350 character short essay on Ishani Nautiyal's specific experiences related to that aspect of the MD Program? Write in first person tone as if you are Ishani. Cite concrete examples.\",\n",
-              " 'result': 'Through my volunteer work at the Cuyahoga County Juvenile Detention Center, I gained insights into the disparities in underserved communities. This motivated me to advocate for equitable access to healthcare. As the president of Global Medical Brigades, I led initiatives to provide accessible healthcare in rural Honduras, underlining the importance of population health.'}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 21
-        }
+      "outputs": [],
+      "source": [
+        "q = # Enter query here\n",
+        "qa_txt.invoke(q)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [
+        "E8sbYA1UZ8f_"
+      ],
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
